feat: POST /auth/login